--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2023.0.0</spring-cloud.version>
-		<spring-doc.version>1.7.0</spring-doc.version>
 	</properties>
 	<dependencies>
 		  
@@ -51,8 +50,8 @@
 
 		<dependency>
 			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>${spring-doc.version}</version>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.3.0</version>
 		</dependency>
 
 		<dependency>
